# python-tutorials

./: .gitignore  README.md
Basics/: Makefile  for.py  funcdef2.py  import.py  looptricks.py  nums.py  pickles.py  readfile.py  recursion.py  shelf.py  string_methods.py  strings.py  while.py
Cython/: CMakeLists.txt  Makefile  pyquad.py
Cython/Fortran/: CMakeLists.txt  gfunc.f90  main.f90  pygfunc.f90  pygfunc.h  pygfunc.pyx  test.py
Debugging/: Debugging.rst  Makefile  fib_bug.py  file_bug.py  input_bug.py  list_bug.py  mutable_bug.py
Development/: Devel.rst  Development.rst  Libs.rst  Makefile  dicts.py  pysys.py  urls.py
Docstring/: Docstring.rst  Makefile  hello.py  world.py
Example/: README.rst  pimp.py  test.py
Git/: Makefile
Intro/: Intro.rst  Makefile  basics.py  class.py  dicts.py  elderberry.py  for.py  funcdef.py  funcdef3.py  functional.py  httpd.py  ifelse.py  import.py  lists.py  object.py  os.py  pytut.rst  readfile.py  silly.py  smtp.py  string_ops.py  tuples.py  urls.py  vars.py  while.py  writefile.py  zlib.py
NumPy/: Makefile  NumPy.rst  interpolate.py  least_square.py  minimize.py  naive_matmul.py  numpy_matmul.py  quadrature.py  vectorize.py
Numpy/: Makefile  linalg.py
OOP/: Makefile  OOP.rst  class.py  class2.py  class3.py  decorate.py  dynamic.py  inherit.py  inherit2.py  iter.py  nostate.py  state.py
Pandas/: Makefile  Pandas.ipynb  Pandas.rst
Parallel/: Makefile  Parallel.rst  mpiex.py  pp_cluster.py  pp_smp.py  ptp_np.py  ptp_py.py  pyquad.py  quadr.py  scatter_np.py  scatter_py.py
Persistance/: Makefile  Persistence.rst  (+10 more)
(+94 files in other folders)
